@@ -1,3 +1,8 @@
+2008-06-06  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getPrinterAttributes):
+	printer-uri-supported is not a list.
+
 2008-05-30  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getPrinterAttributes): New
